# Blatt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.django  Dockerfile.tailwind  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tasks.py
.github/workflows/: lint.yml  test.yml
communities/: models.py  tests.py  urls.py  utils.py  validators.py  views.py
communities/migrations/: 0001_initial.py  0002_alter_community_options_alter_subscription_options_and_more.py  0003_community_avatar.py
communities/templates/communities/: community_detail.html  community_form.html
communities/tests/: test_views.py  tests_models.py
core/: settings.py  settings_test.py  urls.py
posts/: mixins.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_postvote.py
posts/templates/posts/: feed.html  post_card.html  post_detail.html  post_form.html  post_list.html
posts/templatetags/: posts_extras.py
static/css/: input.css  output.css
templates/: base.html  community_header.html  dock.html  header.html  header_alt.html  join_button.html  post.html  user_header.html  vote_counter.html
templates/components/: button.html  button_link.html  community_header.html  form_field.html  header.html  input.html  link.html  post.html  post_card.html  user_header.html
templates/partials/: vote_component.html
theme/static_src/src/: globals.css  styles.css
theme/templatetags/: components.py  tags_extra.py
users/: apps.py  backends.py  forms.py  managers.py  models.py  services.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_userpreferences_alter_profile_options_and_more.py  0003_alter_user_email_alter_user_password_and_more.py
users/templates/users/: sign-in.html  sign-up.html  user_detail.html
users/tests/: tests_forms.py  tests_models.py
