[project]
name = "blatt"
version = "0.1.0"
description = "A platform for sharing posts, comments, voting, and community engagement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2",
    "dotenv>=0.9.9",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
]

[project.optional-dependencies]
dev = ["ipython>=9.3.0"]

[tool.ruff.lint]
ignore = ["F401"]

[dependency-groups]
dev = ["pytest-django>=4.11.1"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["*test*.py"]
