[project]
name = "blatt"
version = "0.1.0"
description = "A platform for sharing posts, comments, voting, and community engagement."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.2",
    "django-htmx>=1.27.0",
    "dotenv>=0.9.9",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
]

[project.optional-dependencies]
dev = ["ipython>=9.3.0"]

[dependency-groups]
dev = [
    "django-browser-reload>=1.21.0",
    "invoke>=2.2.0",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.3",
]

[tool.ruff]
line-length = 88
target-version = "py311"

output-format = "github"
fix = true
show-fixes = true

exclude = ["migrations", "*/migrations/*"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "DJ",
    "S",
    "T20",
    "A",
    "SIM",
    "RET",
    "PTH",
    "RUF",
    "ANN",
    "COM818",
    "D",
    "ERA",
]
ignore = [
    "E111",
    "E114",
    "E117",
    "E501",
    "DJ001",
    "B008",
    "RUF012",
    "ANN401",
    "W191",
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D206",
    "D211",
    "D212",
    "D300",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]

[tool.ruff.lint.per-file-ignores]
"*/apps.py" = ["D"]
"*/views.py" = ["F401"]
"*/urls.py" = ["F401"]
"*/admin.py" = ["F401", "D"]
"*/models.py" = ["F401"]
"*/forms.py" = ["F401"]
"*/test*.py" = ["F401", "S", "ARG001", "ARG002", "ANN"]
"manage.py" = ["T20", "ANN"]
"tasks.py" = ["ANN", "D", "T20", "A001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings_test"
python_files = ["*test*.py"]
addopts = "--ds=core.settings_test"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/.venv/*",
    "*/tests/*",
    "*/test*.py",
    "manage.py",
    "core/*",
    "*/__init__.py",
]
